# Patience

./: CMakeLists.txt  Main.cpp  README.md  settings.txt
include/: Card.h  Depot.h  Foundation.h  Game.h  Hand.h  Level.h  Menu.h  MenuOptions.h  Stock.h  Tableau.h  Tile.h
src/: Card.cpp  Depot.cpp  Foundation.cpp  Hand.cpp  Level.cpp  Menu.cpp  MenuOptions.cpp  Stock.cpp  Tableau.cpp  Tile.cpp
